namespace RestaurantApp.Shared.DTOs.Tables;

public class TableDto
{
    public int Id { get; set; }
    public string TableNumber { get; set; } = string.Empty;
    public int Capacity { get; set; }
    public string? Location { get; set; }
    public int RestaurantId { get; set; }
}